--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">What is DadCorp?</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">DadCorp is a monthly subscription service that ships jokes to your email inbox every day! Not only do we guarantee groans from the people you tell these jokes to, we guarantee originality! Sign up for your new hobby today! New parents get a free month!</p>
+                        <p class="text-white-50 mb-4">Alex COrp Alex Corp is a monthly subscription service that ships jokes to your email inbox every day! Not only do we guarantee groans from the people you tell these jokes to, we guarantee originality! Sign up for your new hobby today! New parents get a free month!</p>
                         <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
                     </div>
                 </div>
